Add functionality to subscriptionRoutes.
